--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
         </p>
         <p class=blue name=parConteneur> salut </p>
     </div>
+    
+    <div id="myDiv">
+        Je suis une balise div
+    </div>
+
+    Prénom: <input type="text" id="prenom" value="Mickey">
+    <button onclick="affichePrenom()">Affiche ton prénom</button>
+    <p id="demo"></p>
     <script src="file.js"></script>
 </body>
 
