--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>My JS Page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
@@ -24,7 +24,8 @@
     Prénom: <input type="text" id="prenom" value="Mickey">
     <button onclick="affichePrenom()">Affiche ton prénom</button>
     <p id="demo"></p>
-    <script src="file.js"></script>
+    <script src="assets/file.js"></script>
+
 </body>
 
 </html>
