--- a/exo.html
+++ b/exo.html
@@ -33,5 +33,15 @@
     <p id="prenom"></p>
     <p id="nom"></p>
 
+    <h1>Exercice 4</h1>
+    <img onmouseover="imageAlert()" src="assets/pika.png" alt="Pikachu" id="pika">
+
+    <button onclick="clickAlert()">Click me!</button>
+
+    <div id="changeMe">
+        <button id="coolbutton" onclick="changeStuff()">Click me and something cool will happen</button>
+        <button id="normalbutton" onclick="doNotChangeStuff()">Click me and everything will go back to normal</button>
+    </div>
+
    <script src="assets/exo.js"></script>
 </body>
